Se añadieron los formularios de las tablas catalogos anteriormente mencionadas, este commit porque extrañamente el anterior no lo hizo.

--- a/SAJA/nbproject/project.properties
+++ b/SAJA/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SAJA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.19.jar=src\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.PlaceHolder.classpath}
+    ${libs.PlaceHolder.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
